--- a/wizard/pom.xml
+++ b/wizard/pom.xml
@@ -11,10 +11,12 @@
 	<parent>
 		<groupId>com.developmentontheedge</groupId>
 		<artifactId>be5</artifactId>
-		<version>0.0.2</version>
+		<version>0.0.3-SNAPSHOT</version>
 	</parent>
 
 	<properties>
+		<maven.deploy.skip>true</maven.deploy.skip>
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
